[package]
name = "protobuf_codec"
version = "0.0.8"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "An asynchronous encoder/decoder for Protocol Buffers"
homepage = "https://github.com/sile/pbcodec"
repository = "https://github.com/sile/pbcodec"
readme = "README.md"
keywords = []
categories = []
license = "MIT"

[badges]
travis-ci = {repository = "sile/pbcodec"}
codecov = {repository = "sile/pbcodec"}

[dependencies]
bytecodec = "0.3"
byteorder = "1"
trackable = "0.2"
