[package]
name = "protobuf_codec"
version = "0.2.3"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Encoders and decoders for Protocol Buffers based on bytecodec crate"
homepage = "https://github.com/sile/protobuf_codec"
repository = "https://github.com/sile/protobuf_codec"
readme = "README.md"
keywords = ["protocol-buffers"]
categories = []
license = "MIT"

[badges]
travis-ci = {repository = "sile/protobuf_codec"}
codecov = {repository = "sile/protobuf_codec"}

[dependencies]
bytecodec = "0.4"
trackable = "0.2"
